# se-toolkit-lab-8

./: CHEAT_SHEET.md  REPORT.md  docker-compose.yml  pyproject.toml
backend/src/lms_backend/routers/: items.py
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: server.py  settings.py  tools.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/config/: config.resolved.json
nanobot/workspace/skills/cron/: SKILL.md
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
